# ecu_repository

./: CMakeLists.txt  Points.txt  README.md
components/: C_Extensions.h  HardwareConfig.h  SoftwareConfig.h
components/As2315/: CMakeLists.txt
components/As2315/include/: As2315.h
components/As2315/src/: As2315.c
components/Battery/: CMakeLists.txt
components/Ble/: CMakeLists.txt
components/Ble/include/: BleEngine.h  BleEngine_prm.h  BleManager.h  EspBle.h
components/Ble/src/: BleEngine.c  BleManager.c  EspBle.c
components/CurrentSense/: CMakeLists.txt
components/CurrentSense/include/: CurrentSense.h
components/CurrentSense/src/: CurrentSense.c
components/GsmGprs/: CMakeLists.txt
components/GsmGprs/include/: GsmGprsEngine.h  GsmGprsEngine_prm.h  GsmGprsManager.h  esp_modem.h  esp_modem_dce.h  libGSM.h  sim7600.h  sim900A.h
components/GsmGprs/src/: GsmGprsEngine.c  GsmGprsManager.c  esp_modem.c  esp_modem_dce_service.c  libGSM.c  sim7600.c  sim900A.c
components/Led/: CMakeLists.txt  Kconfig
components/Led/include/: LedEngine.h  LedEngine_prm.h  LedManager.h  LedWs2812.h
components/Led/src/: LedEngine.c  LedManager.c  LedWS2812.c
components/Mac/: CMakeLists.txt
components/Mac/include/: Mac.h
components/Mac/src/: Mac.c
components/SdCard/: CMakeLists.txt
components/SdCard/include/: SdCard.h
components/Timers/: CMakeLists.txt
components/stepperMotor/: CMakeLists.txt  Kconfig
components/system/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c  main.h  main_prv.h  upload_script.html
(+18 files in other folders)
